# at-field

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-third-party.md  PLANNING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
at-field-tray/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
at-field-tray/scripts/: gen_icons.py
at-field-tray/src/: App.tsx  main.tsx
at-field-tray/src-tauri/: Cargo.toml  tauri.conf.json
at-field-tray/src-tauri/capabilities/: default.json
at-field-tray/src-tauri/installer/: hooks.nsh
at-field-tray/src-tauri/src/: autostart.rs  caption_color.rs  lib.rs  main.rs  service_installer.rs
at-field-tray/src/components/: AboutModal.tsx  AdvancedRuleControls.tsx  KillToast.tsx  ProfilePresetRow.tsx  RuleThresholdSlider.tsx  Sparkline.tsx  StatusHeader.tsx
at-field-tray/src/lib/: api.ts  format.ts  hooks.ts  preferences.ts  signal-category.ts  signal-order.ts  signal-visibility.ts  tauri.ts  theme.ts
at-field-tray/src/screens/: EventsScreen.tsx  PrefsScreen.tsx  RulesScreen.tsx  SetupScreen.tsx  SignalDetailScreen.tsx  SignalsScreen.tsx  StatusScreen.tsx
at-field-tray/src/styles/: globals.css
brand/: README.md
docs/: chat-history.md  faq.md  footprint.md  install.md  packaging.md  sensors.md  tuning.md
docs/blog/: awesome-list-submissions.md  launch-post.md
helper/: AtfieldSensors.cs
packaging/pyinstaller/: atf_entry.py  atfield.spec  atfield_service_entry.py
scripts/: bench_tick.py  build_helper.ps1  config.example.toml  fetch_lhm.ps1  gen_installer_images.py  grant_service_control.ps1  install_service.ps1  measure_idle.py  probe_lhm_lib.ps1  uninstall_service.ps1
src/atfield/: __init__.py  actuator.py  audit.py  cli.py  config.py  config_writer.py  forensics.py  http_api.py  lhm_config.py  lhm_supervisor.py  policy.py  prometheus_exporter.py  rule_profiles.py  service.py  signals.py
src/atfield/collectors/: __init__.py  amd.py  hwinfo.py  lhm.py  lhmlib.py  nvml.py  system.py
tests/: conftest.py  test_actuator.py  test_amd_collector.py  test_audit.py  test_cli_doctor_setprofile.py  test_cli_install.py  test_cli_install_lhm.py  test_collectors.py  test_config.py  test_config_writer.py  test_forensics.py  test_http_api.py  test_hwinfo.py  test_lhm_config.py  test_lhm_supervisor.py  test_lhmlib.py  test_multires_history.py  test_policy.py  test_prometheus_exporter.py  test_rule_profiles.py  test_signals.py
