[package]
name = "at-field-tray"
version = "0.2.0"
description = "AT-Field tray app + dashboard"
authors = ["Alonso Martinez"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "at_field_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used to expose the embedded ESM frontend assets via the
# Tauri custom-protocol for production bundles. Tauri requires it to be set.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
